Adding pull request

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -4,6 +4,8 @@ name: Actions Workflow
 on:
   schedule:
     - cron: "* * * * *"
+  pull_request:
+    types: [opened]
 
 jobs:
   run-github-actions:
