--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -4,7 +4,7 @@ name: Actions Workflow
 # on: [push]
 on:
   schedule:
-    - cron: "* 5 * * *"
+    - cron: "*/10 * * * *"
   pull_request:
     types: [opened]
 
