--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -3,8 +3,8 @@ name: Actions Workflow
 # this is a test
 # on: [push]
 on:
-  schedule:
-    - cron: "*/10 * * * *"
+  # schedule:
+  #  - cron: "*/10 * * * *"
   pull_request:
     types: [opened]
 
